# vivisect-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux_x86-64.yml
examples/: main.rs
src/: analysis.rs  constants.rs  context.rs  emulator.rs  error.rs  ihex.rs  lib.rs  memory.rs  monitor.rs  orig_lib.rs  page_lookup.rs  parser.rs  strtab.rs  utils.rs  vstruct.rs  workspace.rs
src/archive/: mod.rs
src/elf/: compression_header.rs  dynamic.rs  gnu_hash.rs  header.rs  mod.rs  note.rs  program_header.rs  reloc.rs  section_header.rs  sym.rs  symver.rs
src/envi/: constants.rs  emulator.rs  memory.rs  mod.rs  operands.rs  registers.rs  utils.rs
src/envi/archs/: mod.rs
src/envi/archs/i386/: mod.rs  registers.rs
src/envi/memcanvas/: mod.rs
src/mach/: constants.rs  exports.rs  header.rs  imports.rs  load_command.rs  mod.rs  relocation.rs  segment.rs  symbols.rs
src/pe/: data_directories.rs  debug.rs  exception.rs  export.rs  header.rs  import.rs  mod.rs  optional_header.rs  relocation.rs  section_table.rs  symbol.rs  utils.rs
