[package]
name = "vivisect"
description = "A cross-platform, ELF, Mach-o, and PE binary parsing and loading crate."
authors = ["Marirs <marirs@gmail.com>"]
version = "0.1.13"
keywords = ["vivisect", "disassembler", "cfg", "capstone"]
categories = ["parsing", "development-tools::debugging"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/marirs/vivisect-rs"
homepage = "https://github.com/marirs/vivisect-rs"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
log = {version="0.4.17", default_features=false, optional=true}
chrono = "0.4.23"
simple_logger = "5"
plain = "0.2.3"
scroll = {version="0.12.0", default_features=false}
capstone = "0.12.0"

[dev-dependencies]
goblin = "0.8.2"

[features]
default = ["std", "elf32", "elf64", "mach32", "mach64", "pe32", "pe64", "archive", "endian_fd"]
std = ["alloc", "scroll/std"]
alloc = ["scroll/derive", "log"]
endian_fd = ["alloc"]
elf32 = []
elf64 = []
# for now we will require mach and pe to be alloc + endian_fd
mach32 = ["alloc", "endian_fd"]
mach64 = ["alloc", "endian_fd"]
pe32 = ["alloc", "endian_fd"]
pe64 = ["alloc", "endian_fd"]
archive = ["alloc"]

[[example]]
name = "main"
path = "examples/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
